--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Text Analyzer</string>
+    <string name="app_name">AI-ONE</string>
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
